--- a/index.html
+++ b/index.html
@@ -1,1 +1,5 @@
 <a href="https://app.clearscore.com/timeline">timeline</a>
+</br></br>
+<a href="clearscore://prospect">clearscore://prospect</a>
+</br></br>
+<a href="clearscore://authorisation/#code=40a1d518-0c33-4409-bd09-bf557d0424ef&market=GB">clearscore://authorisation/#code=40a1d518-0c33-4409-bd09-bf557d0424ef&market=GB</a>
