--- a/timeline.html
+++ b/timeline.html
@@ -2,7 +2,8 @@
 <!doctype html>
 <html>
     <head>
-        <link rel="stylesheet" type="text/css" href="styles.css">		
+        <meta name="viewport" content="width=device-width; initial-scale=1.0;" />
+        <link rel="stylesheet" type="text/css" href="styles.css">
     </head>
     <body>
         <p><b>Welcome to your new timeline</b></p>
